--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@minimal-kit/api",
-  "description": "api & assets",
-  "version": "5.1.0",
+  "name": "uninex-api",
+  "description": "API backend for UniNex: Connecting UIU students through dynamic networking and collaboration.",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
