--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "mysql2": "^3.6.0",
     "next": "^13.4.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
